# vivtc

./: README.rst  meson.build  pyproject.toml
.github/workflows/: build.yml
msvc_project/: VIVTC.sln  VIVTC.vcxproj  VIVTC.vcxproj.filters
src/: vivtc.c
